@@ -28,6 +28,7 @@ K  7151	InternetAddress.parse fails for valid domain literal address
 K  7238	unsolicited FETCH response *must* invalidate X-GM-LABELS in cache
 K  7332	MimeBodyPart.isMimeType returns false if type header can't be parsed
 K  7356	NPE in Tomcat ClassLoader causes Session.getInstance to fail
+K  7378	Deadlock in IMAPFolder.doProtocolCommand()
 
 
 		  CHANGES IN THE 1.5.5 RELEASE
